Maybe Fixed Button Positions on Mobile

--- a/styles/castle.css
+++ b/styles/castle.css
@@ -85,6 +85,7 @@
 .buttonInstruction {
     color: red;
     font-weight: bolder;
+    z-index: 1;
 }
 
 .linkButtonsWrapper {
@@ -97,6 +98,7 @@
     justify-content: center;
     text-align: center;
     border-radius: 15px;
+    z-index: 2;
 }
 
 @media (max-width: 1000px) {
