--- a/styles/home.css
+++ b/styles/home.css
@@ -59,6 +59,7 @@ body {
     border-radius: 10px;
     position: absolute;
     margin-right: 5rem;
+    margin-left: auto;
     margin-top: 2.5px;
     z-index: 2;
     cursor: pointer;
